@@ -53,7 +53,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">False</property>
-                        <property name="margin_left">16</property>
+                        <property name="margin_left">20</property>
                         <property name="use_underline">True</property>
                         <property name="draw_indicator">True</property>
                       </object>
