@@ -28,6 +28,7 @@
    - Replace Backup standard dialog box with an assistant (todo #1317).
    - Restore assistant: implements restore protection rules (todo #1320).
    - Restore assistant: does not require user confirmation on new dossier (todo #1336).
+   - UserPreferences: choose between reordering and detaching main tabs (todo #1147).
 
    + ofa-unzip: command-line utility to unarchive a data flow on stdout.
 
